# bio_data_validation

./: .gitignore  .pre-commit-config.yaml  CACHE_AND_FALLBACK.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART_PRODUCTION.md  README  README.md  RULE_VERSIONING.md  check_ncbi_key.py  debug_output.txt  depmap_validation_summary_20251008_204957.txt  docker-compose.yml  file.md  fix_datetime_bug.py  pyproject.toml  real_world_validation_test.py  requirements-dev.txt  requirements.text  test_validator_diagnostics.py  validate_bio.py  validate_dataset.py  validate_depmap.py  validate_depmap_fixed.py
.github/workflows/: cd.yml  ci.yml  data-validation.yml
config/: base_config.py  policy_config.yml  validation_rules.yaml  validation_rules.yml
infrastructure/docker/: Dockerfile
infrastructure/grafana/dashboards/: bio-validation-overview.json  dashboard.yml
infrastructure/grafana/datasources/: prometheus.yml
infrastructure/prometheus/: alerts.yml  prometheus.yml
scripts/: test_cache_and_fallback.py  test_phase2_integration.py  test_rule_versioning.py  test_variant_validation.py
scripts/examples/: example_usage.py
scripts/metrics/: calculate_quality_metrics.py  push_to_mlflow.py
scripts/setup/: init_dvc.py
scripts/validation/: check_status.py  generate_report.py  validate_datasets.py
src/: __init__.py
src/agents/: human_review_coordinator.py  orchestrator.py
src/api/: models.py  routes.py  routes_fix.py
src/cli/: __init__.py  config.py
src/cli/commands/: cache.py  examples.py  info.py  setup.py  validate.py
src/cli/formatters/: __init__.py  json_formatter.py  text.py
src/engine/: decision_tables.py  policy_engine.py
src/monitoring/: logging_config.py  metrics.py
src/reports/: report_generator.py
src/schemas/: base_schemas.py  biological_schemas.py
src/utils/: batch_processor.py  bio_tools.py  cache_manager.py  database_clients.py
src/validators/: bio_lookups.py  bio_rules.py  matrix_validator.py  rule_validator.py  sample_metadata_validator.py  schema_validator.py  variant_validator.py
tests/: README.md  builders.py  conftest.py  pytest.ini
tests/e2e/: test_api_endpoints.py  test_complete_workflow.py
tests/integration/: test_api_integration.py  test_database_integration.py  test_integration_workflow.py
tests/system/: test_components.sh  test_e2e_workflow.sh
tests/unit/agents/: test_human_review_coordinator.py  test_orchestrator.py
tests/unit/engine/: test_policy_engine.py
tests/unit/validators/: test_bio_lookups.py  test_bio_rules.py  (+2 more)
validation_output/: crispr_validation_report.json  crispr_validation_report_data.csv  crispr_validation_report_summary.md  example_report_with_versioning.json
validation_output/phase2_tests/: validation_report_20251017_084828.html  validation_report_20251017_084828.md  validation_report_20251017_085159.html  validation_report_20251017_085159.md  validation_report_20251017_085425.html  validation_report_20251017_085425.md  validation_report_20251017_090026.html  validation_report_20251017_090026.md  validation_report_20251017_090633.html  validation_report_20251017_090633.md  validation_report_20251017_090953.html  validation_report_20251017_090953.md
